# xtra

./: .gitignore  CMakeLists.txt  LICENSE  hello.e  main.c
src/: arry.c  arry.h  bool.c  bool.h  bracket.c  bracket.h  debug.c  debug.h  do.c  do.h  double.c  double.h  enum.c  enum.h  error.c  error.h  eval.c  eval.h  for.c  for.h  if.c  if.h  int.c  int.h  interpreter.c  interpreter.h  io.c  io.h  lexer.c  lexer.h  math.c  math.h  memory.c  memory.h  null.c  null.h  parser.c  parser.h  sign.c  sign.h  (+9 more)
src/parser/: logical.c  logical.h  normalize.c  normalize.h
